# cppfunkin

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
assets/characters/bf/: character.json
assets/characters/boombox/: character.json  spritesheet.xml
assets/characters/catshit/: character.json  spritesheet.xml
assets/characters/d5rkMoruMix/: character.json
assets/characters/dad/: character.json
assets/characters/defected/: character.json
assets/characters/gf/: character.json  spritesheet.xml
assets/characters/gfboxing/: character.json
assets/characters/goktrap/: character.json  spritesheet.xml
assets/characters/morunew/: character.json  spritesheet.xml
assets/characters/scottpng/: character.json  spritesheet.xml
assets/characters/springku/: character.json  spritesheet.xml
assets/characters/sway/: character.json  spritesheet.xml
assets/characters/valk/: character.json  spritesheet.xml
assets/characters/zardy/: character.json  spritesheet.xml
assets/images/: NOTE_assets.xml  defected.xml  notes.xml
assets/scripts/: script.wren
assets/songs/: list.txt
assets/songs/bitch/: hard.json
assets/songs/black2blue/: hard.json
assets/songs/blissful/: blissful-metadata.json
assets/songs/catshitdotmp3/: hard.json
assets/songs/dad-battle/: hard.json
assets/songs/decoded/: hard.json
assets/songs/foolhardy-2023/: hard.json
assets/songs/goktrap/: hard.json
assets/songs/hernyamorumix/: hard.json
assets/songs/longasssustain/: hard.json
assets/songs/parasitic/: hard.json
assets/songs/sensory-overload/: sensory-overload-chart.json  sensory-overload-metadata.json
assets/songs/ziplash/: hard.json
assets/stages/cafe/: stage.json
assets/stages/crossroads/: stage.json
assets/stages/frisbee/: stage.json
assets/stages/gokuworld from the famous anime dragging balls goku/: stage.json
assets/stages/maze/: stage.json
assets/stages/stage/: stage.json
assets/stages/yandexHernya/: stage.json
src/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  character.cpp  character.hpp  conductor.cpp  conductor.hpp  frame.cpp  frame.hpp  game.cpp  game.hpp  main.cpp  musicbeatstate.cpp  musicbeatstate.hpp  note.cpp  note.hpp  object.cpp  object.hpp  playstate.cpp  playstate.hpp  song.cpp  song.hpp  songselectstate.cpp  songselectstate.hpp  sparrowsprite.cpp  sparrowsprite.hpp  sprite.cpp  sprite.hpp  state.cpp  state.hpp  strumnote.cpp  strumnote.hpp  text.cpp  text.hpp
src/engine/: animatedsprite.cpp  animatedsprite.hpp  animation.cpp  animation.hpp  axes.hpp  bar.cpp  bar.hpp  camera.cpp  camera.hpp  frame.cpp  frame.hpp  game.cpp  game.hpp  group.cpp  group.hpp  macos.hpp  macos.mm  memorycounter.cpp  memorycounter.hpp  object.cpp  object.hpp  sparrowsprite.cpp  sparrowsprite.hpp  sprite.cpp  sprite.hpp  state.cpp  state.hpp  text.cpp  text.hpp  timer.cpp  timer.hpp
src/funkin/: alphabet.cpp  alphabet.hpp  alphabetcharacter.cpp  alphabetcharacter.hpp  character.cpp  character.hpp  conductor.cpp  conductor.hpp  coolutil.cpp  coolutil.hpp  healthbar.cpp  healthbar.hpp  healthicon.cpp  healthicon.hpp  mainmenustate.cpp  mainmenustate.hpp  musicbeatstate.cpp  musicbeatstate.hpp  note.cpp  note.hpp  playfield.cpp  playfield.hpp  playstate.cpp  playstate.hpp  script.cpp  script.hpp  song.cpp  song.hpp  songselectstate.cpp  songselectstate.hpp  stage.cpp  stage.hpp  strumnote.cpp  strumnote.hpp  titlestate.cpp  titlestate.hpp
